2006-04-19  Harish Krishnaswamy  <kharish@novell.com>

	* camel-gw-listener.c: (add_esource):
	Add default color to the GW source created.
	Fixes #167102 (bugzilla.novell.com).
 
2006-03-11  Sushma Rai  <rsushma@novell.com>

	* camel-gw-listener.c (get_addressbook_names_from_server): If use_ssl
	parameter is found use https, otherwise use http.
	Asking for password thrice on failure. Also freeing password key.
	(account_changed): Checking for NULL old ssl paramter. Fixes a crash.

2006-01-06  Simon Zheng <simon.zheng@sun.com>

	* camel-gw-listener.c:
	* camel-gw-listener.h:
	use libedataserver/e-account-list.h instead of e-util/e-account-list.h.
	use libedataserver/e-account.h instead of e-util/e-account.h.

2005-12-21  Chenthill Palanisamy  <pchenthill@novell.com>

	Committing for Sushma Rai  <rsushma@novell.com>

	Fixes #320119
	* camel-gw-listener.c: (add_addressbook_sources): Skip the 
	Novell System Addressbook which is a personal addressbook
	returned from the server.

2005-12-12  Harish Krishnaswamy  <kharish@novell.com>

	* Makefile.am: Fix make-clean issues.

2005-11-24  Sushma Rai  <rsushma@novell.com>

	* camel-gw-listener.c (add_addressbook_sources): Checking if the 
	frequent contacts folder is read from the server, and if not
	displaying the warning message to user, asking to use some other
	GroupWise mail clinet to get it created.

2005-11-09  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	* camel-gw-listener.c (get_addressbook_names_from_server):
	check if string (eg. use_ssl) are NULL before strcmp(). 
	prevents a violation.

2005-09-28  Sushma Rai  <rsushma@novell.com>

	* camel-gw-listener.c (add_addressbook_sources): Removed name
	comparison and using writable property, to find the system
	address book, while marking for offline usage.

2005-09-16 Vivek Jain <jvivek@novell.com>
 	
 	* camel-gw-listener.c:(get_addressbook_names_from_server)
 	uncache the password if it could not authenticate, else since we